fix(ui): prevent page scrollbar flicker

--- a/assets/main.css
+++ b/assets/main.css
@@ -88,7 +88,7 @@
     min-width: 520px;
     padding: 16px;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden;
   }
 }
 
